[metadata]
name = tuna
version = 0.4.0
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Visualize Python performance profiles
url = https://github.com/nschloe/tuna
project_urls =
    Code=https://github.com/nschloe/tuna
    Issues=https://github.com/nschloe/tuna/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: User Interfaces
    Topic :: Utilities

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    tuna = tuna.cli:main

[options.package_data]
* =
    web/*.html
    web/static/*.js
    web/static/*.css
    web/static/favicon256.png
