[metadata]
name = tuna
version = 0.5.11
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Visualize Python performance profiles
url = https://github.com/nschloe/tuna
project_urls =
    Code=https://github.com/nschloe/tuna
    Issues=https://github.com/nschloe/tuna/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: User Interfaces
    Topic :: Utilities
keywords =
    performance
    profile
    visualization

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
python_requires = >=3.6

[options.entry_points]
console_scripts =
    tuna = tuna.cli:main

[options.package_data]
* =
    web/*.html
    web/static/*.js
    web/static/*.css
    web/static/favicon256.png
